@@ -5,7 +5,7 @@ Theme URI: https://tishonator.com/product/fgymm
 Author: tishonator
 Author URI: https://tishonator.com
 Text Domain: fgymm
-Version: 1.6.4
+Version: 1.6.5
 Tags: blog, entertainment, news, two-columns, right-sidebar, custom-logo, custom-background, custom-header, custom-menu, featured-images, threaded-comments, translation-ready, sticky-post, theme-options, footer-widgets, full-width-template, full-width-template, front-page-post-form
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
@@ -141,6 +141,7 @@ ul {
 
 /* header */
 #header-main-fixed {
+	min-height:40px;
 	clear:both;
 	background-color:#555555;
 	margin:0;
@@ -172,9 +173,11 @@ ul {
 	margin-right:10px;
 }
 
-#header-logo > a.custom-logo-link,
-#header-logo #site-identity {
-    float:left;
+
+
+#header-logo {
+    display: flex;
+    align-items: center;
 }
 
 #header-logo h1 {
@@ -341,7 +344,6 @@ td, th {
 }
 
 embed,
-iframe,
 object,
 video {
 	margin-bottom: 24px;
@@ -1539,6 +1541,15 @@ img.wp-post-image {
     width: 40%;
 }
 
+.fb_iframe_widget span {
+	display: block !important;
+}
+
+#pin-save-button span {
+	margin-top: -19px !important;
+	position: absolute;
+}
+
 /* Large Resolution */
 @media screen and (min-width: 800px) {
 	
@@ -1586,12 +1597,22 @@ img.wp-post-image {
 		margin-top:10px;
 	}
 
+	#header-content-wrapper {
+		position:relative;
+	}
+
+	#navmain {
+	    bottom: 0;
+	    position: absolute;
+	    right: 0;
+	}
+
 	#navmain div {
 		padding:0 0 0 20px;
 	}
 	
 	#navmain ul {
-		padding:10px 0 0 0;
+		padding:0;
 		margin:0;
 		white-space:nowrap;
 	}
@@ -1907,8 +1928,6 @@ img.wp-post-image {
 	}
 	
 	#header-logo {
-		float:none;
-		display:inline-block;
 		margin-left:5px;
 	}
 
